--- a/index.html
+++ b/index.html
@@ -1,4 +1,18 @@
 <!-- TODO 1: Create the HTML Boilerplate -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>My Web Developer Portfolio HTML only</title>
+</head>
+<body>
+    
+</body>
+</html>
+<h1>My Web Developer Portfolio HTML only</h1>
+<h2>I am a Web Develper</h2>
+<hr>
 
 <!-- TODO 2: Add Your previous projects' HTML into the public folder -->
 
@@ -7,9 +21,17 @@
 <!-- TODO 4: Add titles/subtitles etc. -->
 
 <!-- TODO 5: Add a link to the project pages -->
+<a href="./public/movie-ranking.html"><h3>My movie ranking project</h3></a>
+    <img src="./assets/images/movieranking.png" height="200"/>
+
+<a href="./public/birthday-invite.html"><h3>My birthday-invite Project</h3></a>
+    <img src="./assets/images/mybirthdayinvite.png" height=200 />
 
 <!-- TODO 6: Add images to show the project previews
 HINT for TODO 6: You can use the height attribute set to 200 to make the image smaller:
 https://developer.mozilla.org/en-US/docs/Web/HTML/Element/img#attr-height -->
 
 <!-- TODO 7: Add the Contact Me and About Me page links -->
+<hr />
+<a href="./public/contact.html">Contact Me</a>
+<a href="./public/about.html">About Me</a>
